deployments/k8s/integration-service/integration-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integration-service
  labels:
    app: integration-service
spec:
  type: NodePort
  selector:
    app: integration-service
  ports:
    - name: http
      port: 80
      targetPort: 5004
      nodePort: 30004
      protocol: TCP
