deployments/k8s/integration-service/integration-virtual-service-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: integration-vs
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /api/integration
    route:
    - destination:
        host: integration-service
        port:
          number: 80
